--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Exocet";
+  src: url("./Font/exocet.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
